--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script>
   var mesh = new THREE.Mesh( new THREE.SphereGeometry(), new THREE.MeshBasicMaterial());// dummy
   var font_ready = new THREE.Mesh( new THREE.SphereGeometry(), new THREE.MeshBasicMaterial());// dummy
+  var font_game = new THREE.Mesh( new THREE.SphereGeometry(), new THREE.MeshBasicMaterial());// dummy
   var font_clear = new THREE.Mesh( new THREE.SphereGeometry(), new THREE.MeshBasicMaterial());// dummy
   var font_gover = new THREE.Mesh( new THREE.SphereGeometry(), new THREE.MeshBasicMaterial());// dummy
   var pos = new THREE.Vector3();
@@ -98,13 +99,13 @@
 
   // ステージの初期化  
   var stage_data = [
+    [1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], 
+    [1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1], 
+    [1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], 
+    [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1], 
+    [1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1], 
     [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], 
-    [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], 
-    [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], 
-    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1], 
-    [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], 
-    [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], 
-    [1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], 
+    [1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0], 
     [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2], 
   ];
   load_num++;
@@ -139,7 +140,7 @@
   var font_loader = new THREE.FontLoader();
   font_loader.load( 'helvetiker_regular.typeface.json', function ( response  ) {
     var material_font = new THREE.MeshBasicMaterial( { color: 0xff6060 } );
-    var geometry_ready = new THREE.TextGeometry( 'Ready?', {
+    var geometry_ready = new THREE.TextGeometry( 'READY?', {
       font: response,
       size: 1.5,
       height: 0.1,
@@ -147,7 +148,16 @@
       bevelEnabled: false,
     } );
     geometry_ready.center();
-    var geometry_clear = new THREE.TextGeometry( 'Clear!', {
+    var material_font = new THREE.MeshBasicMaterial( { color: 0xff6060 } );
+    var geometry_game = new THREE.TextGeometry( 'NOW PLAYING', {
+      font: response,
+      size: 1.5,
+      height: 0.1,
+      curveSegments: 12,
+      bevelEnabled: false,
+    } );
+    geometry_game.center();
+    var geometry_clear = new THREE.TextGeometry( 'CLEAR', {
       font: response,
       size: 1.5,
       height: 0.1,
@@ -166,6 +176,9 @@
     font_ready = new THREE.Mesh( geometry_ready, material_font );
     font_ready.position = new THREE.Vector3(0, 5, 0);
     font_ready.rotateX(-0.5*3.1415926535);// y軸を正面
+    font_game = new THREE.Mesh( geometry_game, material_font );
+    font_game.position = new THREE.Vector3(0, 5, 0);
+    font_game.rotateX(-0.5*3.1415926535);// y軸を正面
     font_clear = new THREE.Mesh( geometry_clear, material_font );
     font_clear.position = new THREE.Vector3(0, 5, 0);
     font_clear.rotateX(-0.5*3.1415926535);// y軸を正面
@@ -208,7 +221,7 @@
       pos.set(-7.5,0.5,-2.5);
       vel.set(0,0,0);
       mesh.position.set(pos.x,pos.y,pos.z);
-      mesh.rotateY(0.001*elapsedTime);// 自転
+      mesh.rotateY(0.0001*elapsedTime);// 自転
       if(mousedown){
         scene.remove(font_ready);
         state = STATE.PLAY;
@@ -220,6 +233,7 @@
       var iz = Math.floor(pos.z+4.0);
       var on_surface = false;
       var is_cup_in = false;
+      scene.add(font_game);
       if(0 <= iz && iz < stage_data.length
       && 0 <= ix && ix < stage_data[iz].length)
       {
@@ -253,10 +267,12 @@
       mesh.rotateY(0.001*elapsedTime);// 自転
       // 落ちた
       if(vel.y < -0.0001 * 10.0){
+        scene.remove(font_gamf);
         state = STATE.GAMEOVER;
       }
       // カップイン
       if(is_cup_in){
+        scene.remove(font_game);
         state = STATE.CLEAR;
       }
       
